examples/test/testpolicy2872.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2872
  namespace: namespace367
spec:
  podSelector:
    matchLabels:
      key28: value49
      key14: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value6
          key47: value10
          key38: value9
      podSelector:
        matchLabels:
          key5: value48
          key22: value19
